Multiple changes with ansible

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -9,6 +9,7 @@
     - ca-certificates
     - curl
     - software-properties-common
+    - python-pip
 
 - name: Add docker repo key
   apt_key:
@@ -26,3 +27,8 @@
     name: "docker-engine=1.12.6-0~debian-jessie"
     state: present
     update_cache: yes
+
+- name: Install pip-moduels
+  pip:
+    name: "docker-py"
+    state: present
